<resources>
    <string name="app_name">Workout</string>
    <string name="name">Name</string>
    <string name="enter">Enter</string>
    <string name="height">height</string>
    <string name="age">Age</string>
    <string name="weight">weight</string>
    <string name="hello">Hello</string>
    <string-array name="workouts">
        <item>Push Up</item>
        <item>Crunch</item>
        <item>Plank</item>
    </string-array>
</resources>