<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name"
        style="@style/MainPage_editTex"
        android:hint="@string/name"
        android:text=""
        android:minHeight="48dp"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/age"
        style="@style/MainPage_editTex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:hint="@string/age"
        android:minHeight="48dp"
        android:inputType="number" />

    <EditText
        android:id="@+id/weight"
        style="@style/MainPage_editTex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age"
        android:hint="@string/weight"
        android:minHeight="48dp"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/height"
        style="@style/MainPage_editTex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight"
        android:hint="@string/height"
        android:minHeight="48dp"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/Enter"

        style="@style/MainPage_buttonFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/height"
        android:text="@string/enter"
        android:onClick="act2"

        tools:ignore="UsingOnClickInXml" />

</RelativeLayout>